# perspicillum

./: .gitignore  CMakeLists.txt  GETTING_STARTED.txt  INDEX.md  LICENSE  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  imgui.ini
cmake/: perspicillumConfig.cmake.in
examples/: CMakeLists.txt  data_types.cpp  figure_api.cpp  heatmap.cpp  heatmap_large.cpp  live_example.cpp  quick_plot.cpp
include/: perspicillum.hpp
include/perspicillum/: data_container.hpp  express.hpp  figure.hpp  live_figure.hpp  live_plots.hpp  plot_base.hpp  plot_style.hpp  plots.hpp  window_manager.hpp
src/backends/: imgui_backend.cpp  implot_adapter.cpp
src/core/: figure.cpp
src/live/: live_figure.cpp  live_plots.cpp  live_shared.hpp
tests/: CMakeLists.txt  data_container_test.cpp
